--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>edu.cooper.ece366</groupId>
-  <artifactId>coopflix</artifactId>
+  <artifactId>CoopedIn</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>coopflix</name>
+  <name>CoopedIn</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
