--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
       <version>2.9.3</version>
     </dependency>
     <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.23</version>
+    </dependency>
+    <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-simple</artifactId>
       <version>1.7.21</version>
@@ -56,6 +61,7 @@
       <artifactId>sqlite-jdbc</artifactId>
       <version>3.18.0</version>
     </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
